# NabLab

./: .gitignore  .project  404.html  AUTHORS  BUILD.arcane.md  BUILD.kokkos.md  BUILD.leveldb.md  HowToGitNabLab.md  INSTALL.RC.txt  LICENSE  NOTICE  NabLabTasks.ods  README.kokkos  README.md  appList.docx  appList.txt  changeversion.sh  debug.html  docker.html  firstextension.html  firstmodule.html  gettingstarted.html  index.html  install.sh  listFiles.sh  modulecomposition.html  nablablanguage.html  ngenlanguage.html  pom.xml  sitemap.xml
DemoSLE/: .classpath  .project  README.md  README.odt  (+2 more)
NablaExamplesKokkos/src/: CMakeLists.txt
NablaExamplesKokkos/src/eucclhyd/: EUCCLHYD.cc
NablaExamplesKokkos/src/explicitheatequation/: CMakeLists.txt  ExplicitHeatEquation.cc
NablaExamplesKokkos/src/glace2d/: CMakeLists.txt  Glace2d.cc  Glace2dFunctions.cc  Glace2dFunctions.h
NablaExamplesKokkos/src/heatequation/: CMakeLists.txt  HeatEquation.cc
NablaExamplesKokkos/src/implicitheatequation/: CMakeLists.txt  ImplicitHeatEquation.cc
NablaGlaceKokkos/glace2d/: .gitignore  CMakeLists.txt  Glace2d.cc  Glace2d.cpp  Glace2d.model.cc  Glace2dFunctions.cpp  Glace2dFunctions.h
NablaTestKokkos/src/test/: CMakeLists.txt  Test.cc  Test.cpp
fr.cea.nabla.cpplib/src/: CMakeLists.txt  Makefile  Utils.h
fr.cea.nabla.cpplib/src/mesh/: CartesianMesh2DGenerator.cc  CartesianMesh2DGenerator.cpp  CartesianMesh2DGenerator.h  FileWriter.h  Mesh.cpp  Mesh.h  NodeIdContainer.h  NumericMesh2D.cc  NumericMesh2D.cpp  NumericMesh2D.h  ParallelNumericMesh2D.h  PvdFileWriter2D.h  VtkFileWriter2D.cc  VtkFileWriter2D.cpp  VtkFileWriter2D.h
fr.cea.nabla.cpplib/src/types/: ArrayOperations.cc  ArrayOperations.h  LinearAlgebraFunctions.h  MathFunctions.cc  MathFunctions.cpp  MathFunctions.h  Matrix.cc  MultiArray.h  Real2.cpp  Real2.h  Real2x2.cpp  Real2x2.h  Real3.cc  Real3.cpp  Real3.h  Real3x3.cc  Real3x3.cpp  Real3x3.h  Types.h
fr.cea.nabla.cpplib/src/utils/: Timer.h  Utils.h
plugins/fr.cea.nabla.cpplib/src/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/kokkos/linearalgebra/: LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h  Matrix.cc  Matrix.h
plugins/fr.cea.nabla.cpplib/src/kokkos/utils/: Parallel.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/: CrsMatrix.h  LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h  Matrix.cc  Matrix.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/kokkos/: LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/linearalgebraalien/: Arcane2AlienVector.h  CMakeLists.txt  Distribution.cc  Distribution.h  LinearAlgebra.cc  LinearAlgebra.h  Matrix.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/linearalgebrakokkos/: CMakeLists.txt  LinearAlgebra.cc  LinearAlgebra.h  Matrix.cc  Matrix.h  Vector.cc  Vector.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/linearalgebrastl/: Arcane2StlVector.h  CMakeLists.txt  CrsMatrix.h  LinearAlgebra.cc  LinearAlgebra.h  Matrix.cc  Matrix.h  Vector.cc  Vector.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/stl/: CrsMatrix.h  LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h
plugins/fr.cea.nabla.cpplib/src/linearalgebra/sycl/: CrsMatrix.h  LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h  Matrix.cc  Matrix.h
plugins/fr.cea.nabla.cpplib/src/mesh/: AbstractPvdFileWriter2D.cc  CartesianMesh2D.cc  CartesianMesh2D.h  CartesianMesh2DFactory.cc  CartesianMesh2DFactory.h  CartesianMesh2DGenerator.cc  CartesianMesh2DGenerator.h  FileWriter.cc  FileWriter.h  Mesh.h  MeshGeometry.h  NodeIdContainer.h  NumericMesh2D.cc  NumericMesh2D.h  PvdFileWriter2D.cc  PvdFileWriter2D.h  VtkFileWriter2D.cc  VtkFileWriter2D.h
plugins/fr.cea.nabla.cpplib/src/mesh/cartesianmesh2darcane/: CMakeLists.txt  CartesianMesh2D.cc  CartesianMesh2D.h
plugins/fr.cea.nabla.cpplib/src/mesh/cartesianmesh2dstl/: CMakeLists.txt  CartesianMesh2D.cc  CartesianMesh2D.h  MeshGeometry.h  NodeIdContainer.h  PvdFileWriter2D.cc  PvdFileWriter2D.h  Utils.h
plugins/fr.cea.nabla.cpplib/src/mesh/mesharcane/: CMakeLists.txt  CartesianMesh2DHelper.cc  CartesianMesh2DHelper.h
plugins/fr.cea.nabla.cpplib/src/mesh/meshstl/: CMakeLists.txt  CartesianMesh2D.h  Utils.h
plugins/fr.cea.nabla.cpplib/src/monilog/: CMakeLists.txt  MoniLog.cc  MoniLog.h
plugins/fr.cea.nabla.cpplib/src/nablalib/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/nablalib/linearalgebra/kokkos/: LinearAlgebra.cc  Matrix.cc  Matrix.h
plugins/fr.cea.nabla.cpplib/src/nablalib/mesh/: AbstractPvdFileWriter2D.cc  CartesianMesh2DFactory.cc
plugins/fr.cea.nabla.cpplib/src/nablalib/utils/: Serializer.h  Utils.cc  Utils.h
plugins/fr.cea.nabla.cpplib/src/types/: ArrayOperations.h  LinearAlgebraFunctions.cc  LinearAlgebraFunctions.h  MathFunctions.h  Matrix.cc  Matrix.h  MultiArray.cc  MultiArray.h  Types.h
plugins/fr.cea.nabla.cpplib/src/utils/: Parallel.h  Serializer.h  Timer.cc  Utils.cc  Utils.h
plugins/fr.cea.nabla.cpplib/src/utils/kokkos/: Parallel.h  Serializer.cc  Serializer.h
plugins/fr.cea.nabla.cpplib/src/utils/stl/: Parallel.h  Serializer.cc  Serializer.h
plugins/fr.cea.nabla.cpplib/src/utils/sycl/: Parallel.h  Serializer.h
plugins/fr.cea.nabla.cpplib/tests/: CMakeLists.txt  TestMesh.cc
plugins/fr.cea.nabla.cpplib/tests/cartesianmesh2darcane/: CMakeLists.txt  cartesian1.arc  main.cc
plugins/fr.cea.nabla.cpplib/tests/cartesianmesh2dstl/: CMakeLists.txt  main.cc
plugins/fr.cea.nabla.cpplib/tests/linearalgebrastl/: CMakeLists.txt  main.cc
tests/BatiLibCpp/src/: BatiLib.cc  CMakeLists.txt
tests/BatiLibCpp/src/batilib/: BatiLibCpp.cc  BatiLibCpp.h  IBatiLibCpp.h
tests/BatiLibJni/src/: CMakeLists.txt  batilib_BatiLib.cc  batilib_BatiLibJni.cc
tests/BatiLibJni/src/batilib/: BatiLib.java  BatiLibJni.java
tests/NabLabDrafts/sauv/arcane/testexplicitheatequation/: CMakeLists.txt  ExplicitHeatEquation.axl  ExplicitHeatEquationModule.cc  main.cc
tests/WaveHeightCpp/src/: CMakeLists.txt  WaveHeight.cc
tests/WaveHeightJni/src/: CMakeLists.txt  waveheight_WaveHeightJni.cc
tests/WaveHeightJni/src/waveheight/: WaveHeightJni.java
(+3367 files in other folders)
